I think I figured out how GitHub works
I also added a bunch of stuff, enjoy!

--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -63,6 +63,7 @@
                     android:textStyle="bold" />
 
                 <ImageView
+                    android:id="@+id/img"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
                     app:srcCompat="@drawable/attraction1_purdue_union_hotel"></ImageView>
