--- a/CNIT355_AroundPurdue-master/app/src/main/res/layout/activity_save.xml
+++ b/CNIT355_AroundPurdue-master/app/src/main/res/layout/activity_save.xml
@@ -6,4 +6,47 @@
     android:layout_height="match_parent"
     tools:context=".SaveActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#E1BE78"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/lblSave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/baloo"
+                android:text="Saved Places"
+                android:textAlignment="center"
+                android:textSize="30sp" />
+
+        </LinearLayout>
+
+        <ScrollView
+            android:id="@+id/main_contents"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TableLayout
+                android:id="@+id/tableLayout1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp" />
+
+
+            </TableLayout>
+        </ScrollView>
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
