--- a/CNIT355_AroundPurdue-master/app/src/main/res/layout/activity_guide.xml
+++ b/CNIT355_AroundPurdue-master/app/src/main/res/layout/activity_guide.xml
@@ -27,8 +27,9 @@
             android:layout_height="50dp"
             android:background="@color/purdue"
             android:orientation="horizontal">
+
             <TextView
-                android:id="@+id/lblMain"
+                android:id="@+id/lblSave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -39,183 +40,184 @@
                 android:textSize="20dp" />
         </LinearLayout>
 
-        <ScrollView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="630dp"
-            >
-            <LinearLayout
+            android:layout_height="match_parent">
+
+            <ScrollView
+                android:id="@+id/ScrollView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/txtRate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="5dp"
-                    android:shadowColor="#F5A623"
-                    android:shadowDx="12"
-                    android:shadowDy="12"
-                    android:shadowRadius="8"
-                    android:text="⭐⭐⭐⭐⭐"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    app:srcCompat="@drawable/attraction1_purdue_union_hotel"></ImageView>
+                android:layout_height="match_parent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/txtFilter"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/txtRate"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="3dp"
-                        android:layout_weight="1"
-                        android:background="@color/purdue"
-                        android:fontFamily="@font/basic"
+                        android:gravity="center"
                         android:padding="5dp"
-                        android:text="#PURDUE"
-                        android:textAlignment="center"
-                        android:textColor="@color/black"
-                        android:textSize="16sp"
-                        tools:ignore="TextContrastCheck" />
+                        android:shadowColor="#F5A623"
+                        android:shadowDx="12"
+                        android:shadowDy="12"
+                        android:shadowRadius="8"
+                        android:text="⭐⭐⭐⭐⭐"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        app:srcCompat="@drawable/attraction1_purdue_union_hotel"></ImageView>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/txtFilter"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="3dp"
+                            android:layout_weight="1"
+                            android:background="@color/purdue"
+                            android:fontFamily="@font/basic"
+                            android:padding="5dp"
+                            android:text="#PURDUE"
+                            android:textAlignment="center"
+                            android:textColor="@color/black"
+                            android:textSize="16sp"
+                            tools:ignore="TextContrastCheck" />
+
+                        <TextView
+                            android:id="@+id/txtDescription"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="3dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/border"
+                            android:fontFamily="@font/basic"
+                            android:padding="5dp"
+                            android:text="Memorial Union "
+                            android:textAlignment="center"
+                            android:textColor="#000000"
+                            android:textSize="16sp" />
+                        />
+                    </LinearLayout>
 
                     <TextView
-                        android:id="@+id/txtDescription"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/txtContact"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="3dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/border"
+                        android:layout_margin="1dp"
+                        android:background="@drawable/border2"
                         android:fontFamily="@font/basic"
                         android:padding="5dp"
-                        android:text="Memorial Union "
-                        android:textAlignment="center"
+                        android:text="Contact : "
                         android:textColor="#000000"
-                        android:textSize="16sp" />
-                    />
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/txtPrice"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
+                        android:background="@drawable/border2"
+                        android:fontFamily="@font/basic"
+                        android:padding="5dp"
+                        android:text="Price : "
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/txtLocation"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
+                        android:background="@drawable/border2"
+                        android:fontFamily="@font/basic"
+                        android:padding="5dp"
+                        android:text="Location : "
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/txtTime"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
+                        android:background="@drawable/border2"
+                        android:fontFamily="@font/basic"
+                        android:padding="5dp"
+                        android:text="Time : "
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/txtRecommendation"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
+                        android:background="@drawable/border2"
+                        android:fontFamily="@font/basic"
+                        android:padding="5dp"
+                        android:text="Recommendations : "
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
+
                 </LinearLayout>
+            </ScrollView>
 
-                <TextView
-                    android:id="@+id/txtContact"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="1dp"
-                    android:background="@drawable/border2"
-                    android:fontFamily="@font/basic"
-                    android:padding="5dp"
-                    android:text="Contact :"
-                    android:textColor="#000000"
-                    android:textSize="18sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_weight="1"
+                android:background="@color/white">
 
-                <TextView
-                    android:id="@+id/txtPrice"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="1dp"
-                    android:background="@drawable/border2"
-                    android:fontFamily="@font/basic"
-                    android:padding="5dp"
-                    android:text="Price : "
-                    android:textColor="#000000"
-                    android:textSize="18sp" />
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnLink"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="5dp"
+                    android:layout_weight="80"
+                    android:background="@color/purdue"
+                    android:onClick="clickLink"
+                    android:text="Website"
+                    android:textColor="@color/black"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtRecommendation"
+                    app:rippleColor="@color/purdue" />
 
-                <TextView
-                    android:id="@+id/txtLocation"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="1dp"
-                    android:background="@drawable/border2"
-                    android:fontFamily="@font/basic"
+                <ImageView
+                    android:id="@+id/imgUnsave"
+                    android:layout_width="10dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="4dp"
+                    android:layout_weight="20"
+                    android:background="@color/purdue"
+                    android:onClick="onClickSave"
                     android:padding="5dp"
-                    android:text="Location : "
-                    android:textColor="#000000"
-                    android:textSize="18sp" />
+                    app:srcCompat="@drawable/unsave" />
 
-                <TextView
-                    android:id="@+id/txtTime"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="1dp"
-                    android:background="@drawable/border2"
-                    android:fontFamily="@font/basic"
+                <ImageView
+                    android:id="@+id/imgMap"
+                    android:layout_width="10dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="4dp"
+                    android:layout_weight="20"
+                    android:background="@color/purdue"
                     android:padding="5dp"
-                    android:text="Time :"
-                    android:textColor="#000000"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/txtRecommendation"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="1dp"
-                    android:background="@drawable/border2"
-                    android:fontFamily="@font/basic"
-                    android:padding="5dp"
-                    android:text="Recommendations :"
-                    android:textColor="#000000"
-                    android:textSize="18sp" />
+                    app:srcCompat="@drawable/symbol_map" />
 
             </LinearLayout>
-        </ScrollView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight="1">
-
-            <Button
-                android:id="@+id/btnLink"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_marginTop="1dp"
-                android:layout_marginBottom="88dp"
-                android:layout_weight="1"
-                android:background="@drawable/border"
-                android:text="Link"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtRecommendation" />
-
-            <Button
-                android:id="@+id/btnSave"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_marginTop="1dp"
-                android:layout_marginBottom="88dp"
-                android:layout_weight="1"
-                android:background="@drawable/border"
-                android:text="Save"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtRecommendation" />
-
-            <Button
-                android:id="@+id/btnShare"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_marginTop="1dp"
-                android:layout_marginBottom="88dp"
-                android:layout_weight="1"
-                android:background="@drawable/border"
-                android:text="Share"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtRecommendation" />
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 
